--- a/train_models.ipynb
+++ b/train_models.ipynb
@@ -13,8 +13,9 @@
     "sys.path.insert(0, \"/home/wenh06/Jupyter/wenhao/workspace/torch_ecg/\")\n",
     "sys.path.insert(0, \"/home/wenh06/Jupyter/wenhao/workspace/bib_lookup/\")\n",
     "\n",
-    "from collections import Counter\n",
     "import json\n",
+    "import pickle\n",
+    "from collections import Counter\n",
     "from copy import deepcopy\n",
     "\n",
     "import wfdb\n",
@@ -29,15 +30,36 @@
     "from torch_ecg.cfg import CFG, DEFAULTS\n",
     "\n",
     "from utils.scoring_metrics import compute_challenge_metrics, compute_challenge_score\n",
+    "from utils.features import get_features, get_labels, load_challenge_metadata\n",
     "from cfg import TrainCfg, ModelCfg, BaseCfg\n",
     "from data_reader import CINC2023Reader\n",
     "from dataset import CinC2023Dataset\n",
     "from outputs import CINC2023Outputs, cpc2outcome_map\n",
     "from models import CRNN_CINC2023\n",
     "from trainer import CINC2023Trainer, _set_task\n",
+    "from helper_code import (\n",
+    "    find_data_folders,\n",
+    "    load_challenge_data,\n",
+    ")\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d71ef57",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58800f94",
+   "metadata": {},
+   "source": [
+    "## DL model"
    ]
   },
   {
@@ -90,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "task = \"classification\"\n",
+    "TASK = \"classification\"\n",
     "\n",
     "train_config = deepcopy(TrainCfg)\n",
     "# train_config.db_dir = data_folder\n",
@@ -107,27 +129,27 @@
     "# # train_config.max_lr = 1.5e-3\n",
     "# train_config.early_stopping.patience = 20\n",
     "\n",
-    "train_config[task].model_name = \"crnn\"  # \"crnn\"\n",
+    "train_config[TASK].model_name = \"crnn\"  # \"crnn\"\n",
     "\n",
     "train_config[\n",
-    "    task\n",
+    "    TASK\n",
     "].cnn_name = \"resnet_nature_comm_bottle_neck_se\"  # \"resnet_nature_comm_bottle_neck_se\"\n",
-    "# train_config[task].rnn_name = \"none\"  # \"none\", \"lstm\"\n",
-    "# train_config[task].attn_name = \"se\"  # \"none\", \"se\", \"gc\", \"nl\"\n",
+    "# train_config[TASK].rnn_name = \"none\"  # \"none\", \"lstm\"\n",
+    "# train_config[TASK].attn_name = \"se\"  # \"none\", \"se\", \"gc\", \"nl\"\n",
     "\n",
-    "_set_task(task, train_config)\n",
+    "_set_task(TASK, train_config)\n",
     "\n",
-    "model_config = deepcopy(ModelCfg[task])\n",
+    "model_config = deepcopy(ModelCfg[TASK])\n",
     "\n",
     "# adjust model choices if needed\n",
-    "model_config.model_name = train_config[task].model_name\n",
+    "model_config.model_name = train_config[TASK].model_name\n",
     "# print(model_name)\n",
     "if \"cnn\" in model_config[model_config.model_name]:\n",
-    "    model_config[model_config.model_name].cnn.name = train_config[task].cnn_name\n",
+    "    model_config[model_config.model_name].cnn.name = train_config[TASK].cnn_name\n",
     "if \"rnn\" in model_config[model_config.model_name]:\n",
-    "    model_config[model_config.model_name].rnn.name = train_config[task].rnn_name\n",
+    "    model_config[model_config.model_name].rnn.name = train_config[TASK].rnn_name\n",
     "if \"attn\" in model_config[model_config.model_name]:\n",
-    "    model_config[model_config.model_name].attn.name = train_config[task].attn_name"
+    "    model_config[model_config.model_name].attn.name = train_config[TASK].attn_name"
    ]
   },
   {
@@ -187,8 +209,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_train = CinC2023Dataset(train_config, task, training=True, lazy=True)\n",
-    "ds_test = CinC2023Dataset(train_config, task, training=False, lazy=True)"
+    "ds_train = CinC2023Dataset(train_config, TASK, training=True, lazy=True)\n",
+    "ds_test = CinC2023Dataset(train_config, TASK, training=False, lazy=True)"
    ]
   },
   {
@@ -286,23 +308,141 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0e3edb5",
+   "id": "85bf5f21",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "12548c1e",
+   "metadata": {},
+   "source": [
+    "## ML model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6a2bd05",
+   "id": "eacc9440",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "verbose = 2\n",
+    "data_folder = \"/home/wenh06/Jupyter/wenhao/data/CinC2023/training/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7988ec6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "patient_ids = find_data_folders(data_folder)\n",
+    "num_patients = len(patient_ids)\n",
+    "\n",
+    "if num_patients == 0:\n",
+    "    raise FileNotFoundError(\"No data was provided.\")\n",
+    "else:\n",
+    "    if verbose >= 1:\n",
+    "        print(f\"Found {num_patients} patients.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0e3edb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if verbose >= 1:\n",
+    "    print(\"Extracting features and labels from the Challenge data...\")\n",
+    "\n",
+    "features = list()\n",
+    "outcomes = list()\n",
+    "cpcs = list()\n",
+    "\n",
+    "for i in tqdm(\n",
+    "    range(num_patients),\n",
+    "    desc=\"Extracting features and labels\",\n",
+    "    total=num_patients,\n",
+    "    dynamic_ncols=True,\n",
+    "    mininterval=1.0,\n",
+    "    disable=verbose < 2,\n",
+    "):\n",
+    "    # Load data.\n",
+    "    patient_id = patient_ids[i]\n",
+    "    patient_metadata = load_challenge_metadata(data_folder, patient_id)\n",
+    "\n",
+    "    # Extract features.\n",
+    "    current_features = get_features(patient_metadata)\n",
+    "    features.append(current_features)\n",
+    "\n",
+    "    # Extract labels.\n",
+    "    current_labels = get_labels(patient_metadata)\n",
+    "    outcomes.append(current_labels[\"outcome\"])\n",
+    "    cpcs.append(current_labels[\"cpc\"])\n",
+    "\n",
+    "features = np.vstack(features)\n",
+    "outcomes = np.vstack(outcomes)\n",
+    "cpcs = np.vstack(cpcs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6005eba7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define parameters for random forest classifier and regressor.\n",
+    "n_estimators = 42  # Number of trees in the forest.\n",
+    "max_leaf_nodes = 456  # Maximum number of leaf nodes in each tree.\n",
+    "random_state = 789  # Random state; set for reproducibility.\n",
+    "\n",
+    "# Impute any missing features; use the mean value by default.\n",
+    "imputer = SimpleImputer().fit(features)\n",
+    "\n",
+    "# Train the models.\n",
+    "features = imputer.transform(features)\n",
+    "outcome_model = RandomForestClassifier(\n",
+    "    n_estimators=n_estimators,\n",
+    "    max_leaf_nodes=max_leaf_nodes,\n",
+    "    random_state=random_state,\n",
+    ").fit(features, outcomes.ravel())\n",
+    "cpc_model = RandomForestRegressor(\n",
+    "    n_estimators=n_estimators,\n",
+    "    max_leaf_nodes=max_leaf_nodes,\n",
+    "    random_state=random_state,\n",
+    ").fit(features, cpcs.ravel())\n",
+    "\n",
+    "d = {\"imputer\": imputer, \"outcome_model\": outcome_model, \"cpc_model\": cpc_model}"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "75f466e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# with open(\"./tmp/final_model_ml.pkl\", \"wb\") as f:\n",
+    "#     pickle.dump(d, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "377d065c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2db2a019",
    "metadata": {},
    "outputs": [],
    "source": []
