--- a/train_models.ipynb
+++ b/train_models.ipynb
@@ -30,7 +30,8 @@
     "from torch_ecg.cfg import CFG, DEFAULTS\n",
     "\n",
     "from utils.scoring_metrics import compute_challenge_metrics, compute_challenge_score\n",
-    "from utils.features import get_features, get_labels, load_challenge_metadata\n",
+    "from utils.features import get_features, get_labels\n",
+    "from utils.misc import load_challenge_metadata\n",
     "from cfg import TrainCfg, ModelCfg, BaseCfg\n",
     "from data_reader import CINC2023Reader\n",
     "from dataset import CinC2023Dataset\n",
