update poor outcome risk tables

--- a/images/poor_outcome_risk_table_subset.tex
+++ b/images/poor_outcome_risk_table_subset.tex
@@ -1,17 +1,17 @@
-\begin{tabular}{@{\extracolsep{6pt}}llllllll@{}}
+\begin{tabular}{@{\extracolsep{6pt}}lllllll@{}}
 \toprule
-\multicolumn{2}{l}{Feature} & \multicolumn{3}{l}{Affected} & \multicolumn{2}{l}{Poor Outcome Risk ($95\%$ CI)} & Poor Outcome Risk Difference  ($95\%$ CI) \\ \cline{1-2}\cline{3-5}\cline{6-7}\cline{8-8}
-Feature &  & Affected &  & Poor Outcome Risk (95% CI) &  & Poor Outcome Risk Difference (95% CI) \\
- &  & n & % & n & % &  \\
-Total &  & 607 & 100% & 382 & 62.9% & - \\
+\multicolumn{2}{l}{Feature} & \multicolumn{2}{l}{Affected} & \multicolumn{2}{l}{Poor Outcome Risk ($95\%$ CI)} & Poor Outcome Risk Difference  ($95\%$ CI) \\ \cline{1-2}\cline{3-4}\cline{5-6}\cline{7-7}
+Feature &  & Affected &  & Poor Outcome Risk (95\% CI) &  & Poor Outcome Risk Difference (95\% CI) \\
+ &  & n & \% & n & \% &  \\
+Total &  & 607 & 100\% & 382 & 62.9\% & - \\
 Hospital &  &  &  &  &  &  \\
- & A & 261 & 43.0% & 139 & 53.3% (from 47.2% to 59.2%) & REF \\
- & B & 120 & 19.8% & 86 & 71.7% (from 63.0% to 79.0%) & 18.4% (from 7.9% to 27.9%) \\
- & D & 83 & 13.7% & 56 & 67.5% (from 56.8% to 76.6%) & 14.2% (from 2.0% to 25.2%) \\
- & E & 74 & 12.2% & 59 & 79.7% (from 69.2% to 87.3%) & 26.5% (from 14.4% to 36.2%) \\
- & F & 69 & 11.4% & 42 & 60.9% (from 49.1% to 71.5%) & 7.6% (from -5.6% to 19.9%) \\
+ & A & 261 & 43.0\% & 139 & 53.3\% (from 47.2\% to 59.2\%) & REF \\
+ & B & 120 & 19.8\% & 86 & 71.7\% (from 63.0\% to 79.0\%) & 18.4\% (from 7.9\% to 27.9\%) \\
+ & D & 83 & 13.7\% & 56 & 67.5\% (from 56.8\% to 76.6\%) & 14.2\% (from 2.0\% to 25.2\%) \\
+ & E & 74 & 12.2\% & 59 & 79.7\% (from 69.2\% to 87.3\%) & 26.5\% (from 14.4\% to 36.2\%) \\
+ & F & 69 & 11.4\% & 42 & 60.9\% (from 49.1\% to 71.5\%) & 7.6\% (from -5.6\% to 19.9\%) \\
 Shockable Rhythm &  &  &  &  &  &  \\
- & Yes & 297 & 48.9% & 133 & 44.8% (from 39.2% to 50.5%) & REF \\
- & No & 278 & 45.8% & 230 & 82.7% (from 77.9% to 86.7%) & 38.0% (from 30.5% to 44.8%) \\
+ & Yes & 297 & 48.9\% & 133 & 44.8\% (from 39.2\% to 50.5\%) & REF \\
+ & No & 278 & 45.8\% & 230 & 82.7\% (from 77.9\% to 86.7\%) & 38.0\% (from 30.5\% to 44.8\%) \\
 \bottomrule
 \end{tabular}
