--- a/train_models.ipynb
+++ b/train_models.ipynb
@@ -3,45 +3,76 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2674ced4",
+   "id": "3f9df9da",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import torch\n",
     "\n",
     "# ^^^ pyforest auto-imports - don't write above this line\n",
-    "sys.path.insert(0, \"/home/wenh06/Jupyter/wenhao/workspace/torch_ecg/\")\n",
-    "sys.path.insert(0, \"/home/wenh06/Jupyter/wenhao/workspace/bib_lookup/\")\n",
+    "import os\n",
     "\n",
-    "import json\n",
+    "os.environ[\"CUDA_DEVICE_ORDER\"] = \"PCI_BUS_ID\"\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"2,3,4,5,6,7\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f00923b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.cuda.device_count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2674ced4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "# ^^^ pyforest auto-imports - don't write above this line\n",
+    "sys.path.insert(0, \"/home/wenhao/Jupyter/wenhao/workspace/torch_ecg/\")\n",
+    "sys.path.insert(0, \"/home/wenhao/Jupyter/wenhao/workspace/bib_lookup/\")\n",
+    "\n",
+    "import os\n",
     "import pickle\n",
-    "from collections import Counter\n",
+    "import time\n",
     "from copy import deepcopy\n",
+    "from pathlib import Path\n",
+    "from typing import Dict, Union, Tuple, Sequence\n",
     "\n",
-    "import wfdb\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "from sklearn.base import BaseEstimator\n",
+    "from sklearn.ensemble import RandomForestClassifier, RandomForestRegressor\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from torch.nn.parallel import (  # noqa: F401\n",
+    "    DistributedDataParallel as DDP,\n",
+    "    DataParallel as DP,\n",
+    ")  # noqa: F401\n",
+    "from torch_ecg.cfg import CFG\n",
+    "from torch_ecg.utils.misc import str2bool\n",
+    "from torch_ecg._preprocessors import PreprocManager\n",
     "from tqdm.auto import tqdm\n",
     "\n",
-    "from torch_ecg.utils import list_sum\n",
-    "from scipy.io import loadmat\n",
-    "from torch_ecg.components.outputs import (\n",
-    "    ClassificationOutput,\n",
-    ")\n",
-    "from torch_ecg.utils.misc import dict_to_str\n",
-    "from torch_ecg.cfg import CFG, DEFAULTS\n",
-    "\n",
-    "from utils.scoring_metrics import compute_challenge_metrics, compute_challenge_score\n",
-    "from utils.features import get_features, get_labels\n",
-    "from utils.misc import load_challenge_metadata\n",
-    "from cfg import TrainCfg, ModelCfg, BaseCfg\n",
-    "from data_reader import CINC2023Reader\n",
+    "from cfg import TrainCfg, ModelCfg, MLCfg\n",
     "from dataset import CinC2023Dataset\n",
-    "from outputs import CINC2023Outputs, cpc2outcome_map\n",
-    "from models import CRNN_CINC2023\n",
+    "from models import CRNN_CINC2023, ML_Classifier_CINC2023\n",
     "from trainer import CINC2023Trainer, _set_task\n",
-    "from helper_code import (\n",
-    "    find_data_folders,\n",
-    "    load_challenge_data,\n",
+    "from helper_code import find_data_folders\n",
+    "from utils.features import get_features, get_labels\n",
+    "from utils.misc import (\n",
+    "    load_challenge_metadata,\n",
+    "    load_challenge_eeg_data,\n",
+    "    find_eeg_recording_files,\n",
     ")\n",
+    "from utils.sqi import compute_sqi  # noqa: F401\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -70,9 +101,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CINC2023Trainer.__DEBUG__ = False\n",
+    "TEST_FLAG = False\n",
+    "\n",
+    "TASK = \"classification\"  # \"classification\", \"regression\"\n",
+    "\n",
+    "# choices of the models\n",
+    "TrainCfg[TASK].model_name = \"crnn\"\n",
+    "\n",
+    "# \"tresnetS\"  # \"resnet_nature_comm\", \"tresnetF\", etc.\n",
+    "TrainCfg[TASK].cnn_name = \"resnet_nature_comm_bottle_neck_se\"\n",
+    "\n",
+    "# TrainCfg[TASK].rnn_name = \"none\"  # \"none\", \"lstm\"\n",
+    "# TrainCfg[TASK].attn_name = \"se\"  # \"none\", \"se\", \"gc\", \"nl\"\n",
+    "\n",
+    "ENHANCED_ML_MODEL = True\n",
+    "\n",
+    "_ModelFilename = \"final_model_main.pth.tar\"\n",
+    "_ModelFilename_ml = \"final_model_ml.pkl\"\n",
+    "_ModelFilename_ml_min_guarantee = \"final_model_ml_min_guarantee.pkl\"\n",
+    "\n",
+    "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "if ModelCfg.torch_dtype == torch.float64:\n",
+    "    torch.set_default_tensor_type(torch.DoubleTensor)\n",
+    "    DTYPE = np.float64\n",
+    "else:\n",
+    "    DTYPE = np.float32\n",
+    "\n",
+    "CinC2023Dataset.__DEBUG__ = False\n",
     "CRNN_CINC2023.__DEBUG__ = False\n",
-    "CinC2023Dataset.__DEBUG__ = False"
+    "CINC2023Trainer.__DEBUG__ = False\n",
+    "\n",
+    "EEG_BIPOLAR_CHANNELS = [\n",
+    "    [pair.split(\"-\")[0] for pair in TrainCfg.eeg_bipolar_channels],\n",
+    "    [pair.split(\"-\")[1] for pair in TrainCfg.eeg_bipolar_channels],\n",
+    "]"
    ]
   },
   {
@@ -121,14 +183,25 @@
     "# train_config.final_model_filename = _ModelFilename\n",
     "train_config.debug = True\n",
     "\n",
-    "train_config.db_dir = \"/home/wenh06/Jupyter/wenhao/data/CinC2023/training/\"\n",
-    "# train_config.db_dir = \"/home/wenh06/Jupyter/wenhao/data/CinC2023/training_subset/\"\n",
+    "train_config.db_dir = \"/data1/Jupyter-Data/CinC2023-new/\"\n",
     "\n",
-    "# train_config.n_epochs = 100\n",
-    "# train_config.batch_size = 24  # 16G (Tesla T4)\n",
+    "train_config.n_epochs = 65\n",
+    "train_config.batch_size = 36  # 16G (Tesla T4)\n",
+    "train_config.reload_data_every = 5\n",
     "# train_config.log_step = 20\n",
     "# # train_config.max_lr = 1.5e-3\n",
-    "# train_config.early_stopping.patience = 20\n",
+    "train_config.early_stopping.patience = int(train_config.n_epochs * 0.55)\n",
+    "\n",
+    "# augmentations configurations\n",
+    "# train_config.classification.label_smooth = False\n",
+    "# train_config.classification.random_masking = False\n",
+    "# train_config.classification.stretch_compress = False  # stretch or compress in time axis\n",
+    "# train_config.classification.mixup = CFG(\n",
+    "#     prob=0.6,\n",
+    "#     alpha=0.3,\n",
+    "# )\n",
+    "\n",
+    "# train_config[TASK].pop(\"normalize\")\n",
     "\n",
     "train_config[TASK].model_name = \"crnn\"  # \"crnn\"\n",
     "\n",
@@ -178,11 +251,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f29c565",
+   "id": "3c363603",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.module_size, model.module_size_"
+    "if isinstance(model, DP):\n",
+    "    print(model.module.module_size, model.module.module_size_)\n",
+    "else:\n",
+    "    print(model.module_size, model.module_size_)"
    ]
   },
   {
@@ -241,7 +317,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_test.cache[\"waveforms\"].shape"
+    "# ds_test.cache[\"waveforms\"].shape"
    ]
   },
   {
@@ -251,7 +327,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_train.cache[\"cpc\"]"
+    "# ds_train.cache[\"cpc\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "068440e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(ds_test.reader)"
    ]
   },
   {
@@ -292,7 +378,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8f1f59a9",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "best_state_dict = trainer.train()"
@@ -302,6 +390,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "83c930c2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35c088f4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a63bada",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -451,7 +555,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -465,7 +569,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
